--- a/angular.json
+++ b/angular.json
@@ -55,7 +55,7 @@
             ],
             "styles": [
               "@angular/material/prebuilt-themes/cyan-orange.css",
-              "src/styles.sass"
+              "src/styles.scss"
             ],
             "scripts": []
           },
@@ -115,7 +115,7 @@
             ],
             "styles": [
               "@angular/material/prebuilt-themes/cyan-orange.css",
-              "src/styles.sass"
+              "src/styles.scss"
             ],
             "scripts": []
           }
